Added project section content (#1)

--- a/cv.tex
+++ b/cv.tex
@@ -25,17 +25,17 @@
 \desc{Present}{March 2019}{%
   DG Takano Co., Ltd.\hfill Japan - Tokyo}{
 	FullStack Engineer\vspace{2pt}\newline
-  - Mainly as Back-end using Ruby, JS and SQL (Postgres) as languages \newline
+  - Mainly as Back-end using Ruby, JS and SQL (Postgres) as languages\newline
   - Front-end using HTML (or SLIM), JS, SCSS \newline
   - Brainstorming for new products and features \newline
   - Supervised the quality of the code and tests\newline
   - Developed web applications using Ruby on Rails from scratch\newline
   - Developed static websites using Middleman from scratch\newline
-	- Implemented cloud services such Google Cloud Storage and Big Query \newline
+	- Implemented cloud services such Google Cloud Storage and Big Query\newline
   - Control versioning using Git, Gitlab and Openshift as CI\newline
   - Implemented applications using Docker containers
 }
-\desc{Jun 2017}{May 2016}{%
+\desc{June 2017}{May 2016}{%
   Nimbeo Estrategia E Innovación S.L. \hfill Spain - Madrid}{
   FullStack Engineer\vspace{2pt}\newline
   - Developed, mantained and designed new features\newline
@@ -56,6 +56,47 @@
 %---------------------------------------------------
 \section{Projects}
 
+\desc{October 2019}{Present}{Human Resource Managing System}{%
+  - Building an web application manage human resources and costs\newline
+  - Responsible of Backend development and mantaining quality of code\newline
+  - Helping with the frontend development and brainstorming for new features\newline
+  - Using Ruby with Ruby on rails as framework and Postgres as database
+}
+\desc{July 2017}{May 2018}{Health Monitoring Application}{%
+  - Built an web application to monitor diseases such as diabetes using sensors\newline
+  - Took a leading role with help from my coworkers\newline
+  - Using PHP with laravel and cassandra as database\newline
+  - Cross-Platform mobile app using Angular and Ionic\newline
+  - Designed database, graphical design, features and application flow\newline
+  - Read data from sensors via web APIs\newline
+  - Implemented and managed the project to achieve the requirements
+}
+\desc{October 2016}{December 2016}{Real Time Embeded System}{%
+  - Built an embeded system to control a vehicule on a simuated environment \newline
+  - Designed and planified period cycles to match the requirements\newline
+  - Implemented remote control system to control the vehicule\newline
+  - Implemented brake and accelerate activators to control the velocity\newline
+  - Request real time data form sensor to detect slopes and goal to arrive\newline
+  - Maintained the velocity during slopes and stopping on the goal
+}
+\desc{September 2016}{November 2016}{Web Retail shop}{%
+  - Application for selling and buying retail goods online\newline
+  - Implemented web application with chat funcionalities\newline
+  - Using Java with Spring as Framework and MySQL as database\newline
+  - Modified the application to be used using MongoDB
+}
+\desc{February 2016}{May 2016}{Pub/Sub Servers}{%
+  - Application for communication between computers\newline
+  - Implemented Publication and subscription services using sockets\newline
+  - Using C as programming language with pointers and threads\newline
+  - Syncronization between concurrent threads usng locks and mutex
+}
+\desc{October 2015}{December 2015}{Travel Schedule Android App}{%
+  - Application for making travel plans\newline
+  - Implemented create, read, update and delete functions\newline
+  - Using Java with Android studio as IDE and SQLite as database\newline
+  - Implemented and designed pages, mockups and wireframes
+}
 
 %---------------------------------------------------
 \section{Languages}
