Added language section (#3)

--- a/cv.tex
+++ b/cv.tex
@@ -100,7 +100,10 @@
 
 %---------------------------------------------------
 \section{Languages}
-
+\begin{tabularx}{\textwidth}{X X X X}
+  test & test & test & test  \\
+  test & test & test & end
+\end{tabularx}
 
 %---------------------------------------------------
 \section{Skills}
