Added language content (#4)

--- a/cv.tex
+++ b/cv.tex
@@ -101,8 +101,8 @@
 %---------------------------------------------------
 \section{Languages}
 \begin{tabularx}{\textwidth}{X X X X}
-  test & test & test & test  \\
-  test & test & test & end
+  \large{\textsc{Spanish}} & \large{\textsc{English}} & \large{\textsc{Chinese}} & \large{\textsc{Japanese}} \\
+  Native & Fluent & Fluent & Conversational
 \end{tabularx}
 
 %---------------------------------------------------
