Added skill content (#7)

--- a/cv.tex
+++ b/cv.tex
@@ -32,8 +32,8 @@
   - Developed web applications using Ruby on Rails from scratch\newline
   - Developed static websites using Middleman from scratch\newline
 	- Implemented cloud services such Google Cloud Storage and Big Query\newline
-  - Control versioning using Git, Gitlab and Openshift as CI\newline
-  - Implemented applications using Docker containers
+  - Control versioning using Git, Gitlab and CI staging deploy via Openshift\newline
+  - Implemented applications using Docker containers 
 }
 \desc{June 2017}{May 2016}{%
   Nimbeo Estrategia E Innovación S.L. \hfill Spain - Madrid}{
@@ -68,16 +68,14 @@
   - Using PHP with laravel and cassandra as database\newline
   - Cross-Platform mobile app using Angular and Ionic\newline
   - Designed database, graphical design, features and application flow\newline
-  - Read data from sensors via web APIs\newline
-  - Implemented and managed the project to achieve the requirements
+  - Read data from sensors via web APIs using OAuth2
 }
 \desc{October 2016}{December 2016}{Real Time Embeded System}{%
   - Built an embeded system to control a vehicule on a simuated environment \newline
   - Designed and planified period cycles to match the requirements\newline
   - Implemented remote control system to control the vehicule\newline
   - Implemented brake and accelerate activators to control the velocity\newline
-  - Request real time data form sensor to detect slopes and goal to arrive\newline
-  - Maintained the velocity during slopes and stopping on the goal
+  - Request real time data form sensor to detect slopes and goal to arrive
 }
 \desc{September 2016}{November 2016}{Web Retail shop}{%
   - Application for selling and buying retail goods online\newline
@@ -92,10 +90,8 @@
   - Syncronization between concurrent threads usng locks and mutex
 }
 \desc{October 2015}{December 2015}{Travel Schedule Android App}{%
-  - Application for making travel plans\newline
-  - Implemented create, read, update and delete functions\newline
-  - Using Java with Android studio as IDE and SQLite as database\newline
-  - Implemented and designed pages, mockups and wireframes
+  - Android application for making travel plans\newline
+  - Using Java with Android studio as IDE and SQLite as database
 }
 
 %---------------------------------------------------
@@ -107,6 +103,10 @@
 
 %---------------------------------------------------
 \section{Skills}
-
+\skill{Programming}{Java, Javascript, Ruby, C, C++, Python, PHP, TypeScript}
+\skill{Databases}{Design, Query ( PostgreSQL, MySQL, Cassandra, MongoDB )}
+\skill{Web}{HTML, JSON, YAML, CSS, SASS, SLIM}
+\skill{Frameworks}{Ruby on Rails, Spring, Laravel, Angular, Middleman, Bootstrap, Bulma}
+\skill{Others}{Git, Docker, Google Cloud Platform}
 
 \end{document}
