Changed linkedin link

--- a/cv.tex
+++ b/cv.tex
@@ -2,7 +2,7 @@
 \begin{document}
 \name{Chung We Tseng Fang}
 \address{2-5-3 Higashi-Ikebukuro ARDEN 106}{Toshima-ku}{Tokyo}{170-0013}{Japan}
-\contacts{\phone{080-7809-1945}}{\email{chungwe1994@gmail.com}}{\linkedin{in/chung-we-tseng-fang-71b9b8123/}}
+\contacts{\phone{080-7809-1945}}{\email{chungwe1994@gmail.com}}{\linkedin{in/chung-we-tseng-fang}}
 
 \vspace{2em}
 
@@ -33,7 +33,7 @@
   - Developed static websites using Middleman from scratch\newline
 	- Implemented cloud services such Google Cloud Storage and Big Query\newline
   - Control versioning using Git, Gitlab and CI staging deploy via Openshift\newline
-  - Implemented applications using Docker containers 
+  - Implemented applications using Docker containers
 }
 \desc{June 2017}{May 2016}{%
   Nimbeo Estrategia E Innovación S.L. \hfill Spain - Madrid}{
