--- a/cv.tex
+++ b/cv.tex
@@ -24,11 +24,11 @@
 
 \desc{Present}{March 2019}{%
   DG Takano Co., Ltd.\hfill Japan - Tokyo}{
-	FullStack Engineer\vspace{2pt}\newline
+	Full Stack Engineer\vspace{2pt}\newline
   - Mainly as Back-end using Ruby, JS and SQL (Postgres) as languages\newline
   - Front-end using HTML (or SLIM), JS, SCSS \newline
   - Brainstorming for new products and features \newline
-  - Supervised the quality of the code and tests\newline
+  - Supervised the code quality and tests\newline
   - Developed web applications using Ruby on Rails from scratch\newline
   - Developed static websites using Middleman from scratch\newline
 	- Implemented cloud services such Google Cloud Storage and Big Query\newline
@@ -37,8 +37,8 @@
 }
 \desc{June 2017}{May 2016}{%
   Nimbeo Estrategia E Innovación S.L. \hfill Spain - Madrid}{
-  FullStack Engineer\vspace{2pt}\newline
-  - Developed, mantained and designed new features\newline
+  Full Stack Engineer\vspace{2pt}\newline
+  - Developed, maintained and designed new features\newline
   - Developed web applications using PHP, Postgres and Laravel\newline
   - Front end using HTML, JS, CSS\newline
   - Control versioning using Git\newline
@@ -51,43 +51,43 @@
 \section{Certifications}
 
 \desc{January 2020}{}{Google Cloud Platform, Associate Cloud Engineer}{}
-\desc{March 2018}{}{Oracle Certified Asociate, Java SE 7 Programmer}{}
+\desc{March 2018}{}{Oracle Certified Associate, Java SE 7 Programmer}{}
 
 %---------------------------------------------------
 \section{Projects}
 
 \desc{October 2019}{Present}{Human Resource Managing System}{%
-  - Building an web application manage human resources and costs\newline
-  - Responsible of Backend development and mantaining quality of code\newline
-  - Helping with the frontend development and brainstorming for new features\newline
+  - Built a web application to manage human resources and costs\newline
+  - Responsible of Back-end development and maintaining quality of code\newline
+  - Helping with the Front-end development and brainstorming for new features\newline
   - Using Ruby with Ruby on rails as framework and Postgres as database
 }
 \desc{July 2017}{May 2018}{Health Monitoring Application}{%
-  - Built an web application to monitor diseases such as diabetes using sensors\newline
+  - Built a web application to monitor diseases such as diabetes using sensors\newline
   - Took a leading role with help from my coworkers\newline
   - Using PHP with laravel and cassandra as database\newline
   - Cross-Platform mobile app using Angular and Ionic\newline
   - Designed database, graphical design, features and application flow\newline
   - Read data from sensors via web APIs using OAuth2
 }
-\desc{October 2016}{December 2016}{Real Time Embeded System}{%
-  - Built an embeded system to control a vehicule on a simuated environment \newline
+\desc{October 2016}{December 2016}{Real Time Embedded System}{%
+  - Built an embedded system to control a vehicle on a simulated environment \newline
   - Designed and planified period cycles to match the requirements\newline
-  - Implemented remote control system to control the vehicule\newline
-  - Implemented brake and accelerate activators to control the velocity\newline
-  - Request real time data form sensor to detect slopes and goal to arrive
+  - Implemented remote control system to control the vehicle\newline
+  - Implemented brake and accelerate activators to control the speed\newline
+  - Request real-time data from sensors to detect slopes and goal to arrive
 }
 \desc{September 2016}{November 2016}{Web Retail shop}{%
   - Application for selling and buying retail goods online\newline
-  - Implemented web application with chat funcionalities\newline
+  - Implemented web application with chat functionalities\newline
   - Using Java with Spring as Framework and MySQL as database\newline
-  - Modified the application to be used using MongoDB
+  - Modified the application using MongoDB
 }
 \desc{February 2016}{May 2016}{Pub/Sub Servers}{%
   - Application for communication between computers\newline
   - Implemented Publication and subscription services using sockets\newline
   - Using C as programming language with pointers and threads\newline
-  - Syncronization between concurrent threads usng locks and mutex
+  - Synchronization between concurrent threads using locks and mutex
 }
 \desc{October 2015}{December 2015}{Travel Schedule Android App}{%
   - Android application for making travel plans\newline
