Added website info

--- a/cv.tex
+++ b/cv.tex
@@ -2,7 +2,7 @@
 \begin{document}
 \name{Chung We Tseng Fang}
 \address{2-5-3 Higashi-Ikebukuro ARDEN 106}{Toshima-ku}{Tokyo}{170-0013}{Japan}
-\contacts{\phone{080-7809-1945}\email{chungwe1994@gmail.com}}
+\contacts{\phone{080-7809-1945}\email{chungwe1994@gmail.com}\website{chungwetseng.github.io}}
 \contacts{\linkedin{in/chung-we-tseng-fang}\github{github.com/ChungWeTseng}}
 
 \vspace{2em}
