--- a/cv.tex
+++ b/cv.tex
@@ -1,11 +1,10 @@
 \documentclass[a4paper,10pt]{cv_class}
 \begin{document}
 \name{Chung We Tseng Fang}
-\address{2-5-3 Higashi-Ikebukuro ARDEN 106}{Toshima-ku}{Tokyo}{170-0013}{Japan}
+\address{2-7-4 Kanamecho, Apartment 506}{Toshima-ku}{Tokyo}{171-0043}{Japan}
 \contacts{\phone{080-7809-1945}\email{chungwe1994@gmail.com}\website{chungwetseng.github.io}}
 \contacts{\linkedin{in/chung-we-tseng-fang}\github{github.com/ChungWeTseng}}
 
-\vspace{2em}
 
 %---------------------------------------------------
 \section{Education}
@@ -23,29 +22,34 @@
 %---------------------------------------------------
 \section{Work Experience}
 
-\desc{Present}{March 2019}{%
+\desc{Present}{July 2020}{%
+  OKAN Inc.\hfill Japan - Tokyo}{
+	Full Stack Engineer\vspace{2pt}\newline
+  - Mainly as Back-end using Node with TypeScript, SQL and Mongo\newline
+  - Front-end using React with TypeScript, Hooks and LESS\newline
+  - Working using containers and AWS cloud services \newline
+  - Software development using SCRUM\newline
+  - Developed web applications and microservices
+}
+
+\desc{July 2020}{March 2019}{%
   DG Takano Co., Ltd.\hfill Japan - Tokyo}{
 	Full Stack Engineer\vspace{2pt}\newline
   - Mainly as Back-end using Ruby, JS and SQL (Postgres) as languages\newline
   - Front-end using HTML (or SLIM), JS, SCSS \newline
-  - Brainstorming for new products and features \newline
+  - Brainstorming for new products and features\newline
   - Supervised the code quality and tests\newline
-  - Developed web applications using Ruby on Rails from scratch\newline
-  - Developed static websites using Middleman from scratch\newline
-	- Implemented cloud services such Google Cloud Storage and Big Query\newline
+  - Developed web applications and implemented GCP cloud services\newline
   - Control versioning using Git, Gitlab and CI staging deploy via Openshift\newline
   - Implemented applications using Docker containers
 }
 \desc{June 2017}{May 2016}{%
-  Nimbeo Estrategia E Innovación S.L. \hfill Spain - Madrid}{
+  Nimbeo Estrategia E Innovacion S.L. \hfill Spain - Madrid}{
   Full Stack Engineer\vspace{2pt}\newline
   - Developed, maintained and designed new features\newline
   - Developed web applications using PHP, Postgres and Laravel\newline
-  - Front end using HTML, JS, CSS\newline
-  - Control versioning using Git\newline
   - Developed a Cross-Platform SPA application using Angular and Ionic\newline
-  - Installed and configured Cassandra database for Big Data\newline
-  - Installed Spark and Hadoop for processing large amounts of data
+  - Installed Cassandra database, Spark and Hadoop for Big Data\newline
 }
 
 %---------------------------------------------------
@@ -57,11 +61,11 @@
 %---------------------------------------------------
 \section{Projects}
 
-\desc{October 2019}{Present}{Human Resource Managing System}{%
+\desc{October 2019}{July 2020}{Human Resource Managing System}{%
   - Built a web application to manage human resources and costs\newline
   - Responsible of Back-end development and maintaining quality of code\newline
-  - Helping with the Front-end development and brainstorming for new features\newline
-  - Using Ruby with Ruby on rails as framework and Postgres as database
+  - Front-end development and brainstorming for new features\newline
+  - Using Ruby on rails as framework and Postgres as database
 }
 \desc{July 2017}{May 2018}{Health Monitoring Application}{%
   - Built a web application to monitor diseases such as diabetes using sensors\newline
@@ -81,8 +85,7 @@
 \desc{September 2016}{November 2016}{Web Retail shop}{%
   - Application for selling and buying retail goods online\newline
   - Implemented web application with chat functionalities\newline
-  - Using Java with Spring as Framework and MySQL as database\newline
-  - Modified the application using MongoDB
+  - Using Java with Spring as Framework and MySQL and MongoDB as database\newline
 }
 \desc{February 2016}{May 2016}{Pub/Sub Servers}{%
   - Application for communication between computers\newline
@@ -104,10 +107,10 @@
 
 %---------------------------------------------------
 \section{Skills}
-\skill{Programming}{Java, Javascript, Ruby, C, C++, Python, PHP, TypeScript}
+\skill{Programming}{Java, Javascript, Node, Ruby, C, C++, Python, PHP, TypeScript}
 \skill{Databases}{Design, Query ( PostgreSQL, MySQL, Cassandra, MongoDB )}
-\skill{Web}{HTML, JSON, YAML, CSS, SASS, SLIM}
-\skill{Frameworks}{Ruby on Rails, Spring, Laravel, Angular, Middleman, Bootstrap, Bulma}
-\skill{Others}{Git, Docker, Google Cloud Platform}
+\skill{Web}{HTML, JSON, YAML, CSS, SASS, SLIM, LESS}
+\skill{Frameworks}{React, Ruby on Rails, Express JS, Spring, Laravel, Angular, Bootstrap}
+\skill{Others}{Git, Docker, Google Cloud Platform, Amazon Web Services}
 
 \end{document}
